[package]
name = "rtmi"
version = "0.1.0"
authors = ["mtyle <mtyleranton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tungstenite = "0.11.0"
url = "2.1.1"